--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.0.1",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.22"
   }
 }
