--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,9 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22"
   }
 }
